# cafe

./: .gitignore  README.md  pyproject.toml
examples/: create_weekly_schedule.py
src/cafe/: __init__.py
src/cafe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cafe/schedule/: __init__.py  annealing.py  base.py  constants.py  google.py  linear_prog.py  reader.py  readers.py  schedule.py  turns.py
